--- a/client/src/pages/Lobby/Lobby.module.css
+++ b/client/src/pages/Lobby/Lobby.module.css
@@ -24,7 +24,11 @@
 }
 
 .hostBadge {
-  font-size: 0.7rem;
+  font-size: 14px;
   color: var(--accent2);
   font-family: var(--header-font);
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: unset;
+  font-smooth: never;
+  text-rendering: optimizeSpeed;
 }
