--- a/client/src/variables.css
+++ b/client/src/variables.css
@@ -1,31 +1,37 @@
 /* Twilight 5 Palette By Star  */
 @font-face {
-    font-family: 'Scrambled_Eggs_Bold';
-    src: local('Scrambled_Eggs_Bold'), local('Scrambled Eggs Bold'),
-        url('./assets/fonts/Scrambled_Eggs_Bold.ttf') format('truetype');
+  font-family: "Scrambled_Eggs_Bold";
+  src:
+    local("Scrambled_Eggs_Bold"),
+    local("Scrambled Eggs Bold"),
+    url("./assets/fonts/Scrambled_Eggs_Bold.woff2") format("woff2"),
+    url("./assets/fonts/Scrambled_Eggs_Bold.woff") format("woff");
 }
 
 @font-face {
-    font-family: 'Simple_Script';
-    src: local('Simple Script'), local('Simple_Script'),
-        url('./assets/fonts/Simple_Script.ttf') format('truetype');
+  font-family: "Simple_Script";
+  src:
+    local("Simple Script"),
+    local("Simple_Script"),
+    url("./assets/fonts/Simple_Script.ttf") format("truetype");
 }
 
 @font-face {
-    font-family: 'DyslexicPixel';
-    src: local('DyslexicPixel'), 
-        url('./assets/fonts/DyslexicPixel.ttf') format('truetype');
+  font-family: "DyslexicPixel";
+  src:
+    local("DyslexicPixel"),
+    url("./assets/fonts/DyslexicPixel.ttf") format("truetype");
 }
 
 :root {
-    --header-font: 'Scrambled_Eggs_Bold';
-    --body-font: 'Simple_Script';
-    --dyslexic-font: 'DyslexicPixel';
-    --darkest: #333F58;
-    --second-darkest:#9F838C;   
-    --accent1: #4a7a96;
-    --accent2: #ee8695;
-    --lightest: #FFFBFC;
+  --header-font: "Scrambled_Eggs_Bold";
+  --body-font: "Simple_Script";
+  --dyslexic-font: "DyslexicPixel";
+  --darkest: #333f58;
+  --second-darkest: #9f838c;
+  --accent1: #4a7a96;
+  --accent2: #ee8695;
+  --lightest: #fffbfc;
 
-    --pixel: 4px;
+  --pixel: 4px;
 }
